# customer-service/src/main/java/io/github/bsayli/customerservice/common/api/sort/Sort.java
@@ -1,0 +1,3 @@
+package io.github.bsayli.customerservice.common.api.sort;
+
+public record Sort(SortField field, SortDirection direction) {}
